@@ -1,9 +1,13 @@
 Changes since version 1.2.0
 ---------------------------
 
-- Fixed a race condition that could lead to a deadlock if
-  a thread tried to join with another thread from within
-  the destructor of a servant or class.
+- Fixed a rare connection deadlock, that could happen if lots of long
+  messages are sent rapidly in parallel, using separate threads or
+  AMI.
+
+- Fixed a race condition that could lead to a deadlock if a thread
+  tried to join with another thread from within the destructor of a
+  servant or class.
 
 - Added support for IcePack and Glacier on Windows platforms.
   The IcePack Registry, IcePack Node and Glacier Starter programs
