@@ -1,6 +1,10 @@
 Changes since version 1.2.0
 ---------------------------
 
+- Fixed a rare connection deadlock, that could happen if lots of long
+  messages are sent rapidly in parallel, using separate threads or
+  AMI.
+
 - Ported IcePack demo from C++.
 
 - Added new mechanism for generating Java code into packages.
